# shashlik-map

./: .gitignore  Cargo.toml  README.md  jitpack.yml  prepareRustJitpack.sh  temp_android_ffi.sh  temp_ios_ffi.sh
.github/workflows/: rust.yml
AndroidDemoApp/app/: build.gradle.kts
AndroidDemoApp/app/src/androidTest/java/com/shashlik/demo/: ExampleInstrumentedTest.kt
AndroidDemoApp/app/src/main/: AndroidManifest.xml
AndroidDemoApp/app/src/main/java/com/shashlik/demo/: MainActivity.kt  WGPUSurfaceView.kt
AndroidDemoApp/app/src/main/java/com/shashlik/demo/ui/theme/: Color.kt  Theme.kt  Type.kt
AndroidDemoApp/app/src/main/java/uniffi/ffi_run/: ffi_run.kt
AndroidDemoApp/app/src/test/java/com/shashlik/demo/: ExampleUnitTest.kt
AndroidDemoApp/gradle/: libs.versions.toml
AndroidDemoApp/gradle/wrapper/: gradle-wrapper.properties
app-surface/: Cargo.toml
app-surface/src/: android.rs  app_surface_use_winit.rs  lib.rs
ffi-run/: Cargo.toml
ffi-run/src/: lib.rs
ffi-run/src/platform/: android.rs  ios.rs  mod.rs
iOSDemoApp/: .gitignore  README.md
iOSDemoApp/iOSDemoApp/: ContentView.swift  Info.plist  MetalMapView.swift  iOSDemoApp-Bridging-Header.h
iOSDemoApp/iOSDemoApp.xcodeproj/: project.pbxproj
iOSDemoApp/iOSDemoApp.xcodeproj/xcshareddata/xcschemes/: iOSDemoApp.xcscheme
kmp/: build.gradle.kts  settings.gradle.kts
kmp/demo/: build.gradle.kts
kmp/demo/composeApp/: build.gradle.kts
kmp/demo/composeApp/src/androidMain/: AndroidManifest.xml
kmp/demo/composeApp/src/androidMain/kotlin/com/shashlik/demo/: MainActivity.kt  ShashlikMapApp.kt
kmp/demo/composeApp/src/androidMain/res/values/: strings.xml
kmp/demo/composeApp/src/commonMain/kotlin/com/shashlik/demo/: App.kt
kmp/demo/composeApp/src/iosMain/kotlin/com/shashlik/demo/: MainViewController.kt
kmp/demo/iosApp/Configuration/: Config.xcconfig
kmp/demo/iosApp/iosApp/: ContentView.swift  MetalMapView.swift
kmp/demo/iosApp/iosApp.xcodeproj/: project.pbxproj
kmp/demo/iosApp/iosApp.xcodeproj/xcshareddata/xcschemes/: iosApp.xcscheme
kmp/demo/src/androidTest/java/com/shashlik/demoapp/: ExampleInstrumentedTest.kt
kmp/demo/src/main/: AndroidManifest.xml
kmp/demo/src/main/java/com/shashlik/demoapp/: MainActivity.kt
kmp/demo/src/main/java/com/shashlik/demoapp/ui/theme/: Color.kt  Theme.kt  Type.kt
kmp/demo/src/main/res/values/: themes.xml
kmp/demo/src/test/java/com/shashlik/demoapp/: ExampleUnitTest.kt
kmp/demo2/composeApp/: build.gradle.kts
kmp/demo2/composeApp/src/androidMain/: AndroidManifest.xml
kmp/demo2/composeApp/src/androidMain/kotlin/com/shashlik/demo2/demo2/: MainActivity.kt  Platform.android.kt
kmp/demo2/composeApp/src/commonMain/kotlin/com/shashlik/demo2/demo2/: App.kt  Greeting.kt  Platform.kt
kmp/demo2/composeApp/src/iosMain/kotlin/com/shashlik/demo2/demo2/: MainViewController.kt  Platform.ios.kt
kmp/demo2/iosApp/Configuration/: Config.xcconfig
kmp/demo2/iosApp/iosApp/: ContentView.swift  MetalMapView.swift
kmp/demo2/iosApp/iosApp.xcodeproj/: project.pbxproj
kmp/gradle/: libs.versions.toml
kmp/shared/: build.gradle.kts
kmp/shared/src/androidMain/kotlin/com/shashlik/kmp/: Platform.android.kt  RB.kt  RustBridge.kt  ShashlikMap.android.kt  SimpleLocationManager.kt  TempLocationManager.kt  WGPUSurfaceView.kt  WGPUTextureView.kt
kmp/shared/src/commonMain/kotlin/com/shashlik/kmp/: ShashlikMap.kt
kmp/shared/src/iosMain/kotlin/com/shashlik/kmp/: ShashlikMap.ios.kt
map/: Cargo.toml
map/src/: camera.rs  feature_processor.rs  kml_viewer_group.rs  lib.rs  puck_group.rs  route_controller.rs  route_group.rs  style_loader.rs  test_kml_viewer_group.rs  test_puck_group.rs  test_simple_path_group.rs
map/src/route/: mod.rs  route_controller.rs  route_group.rs
map/src/tiles/: mesh_loader.rs  mod.rs  old_tiles_provider.rs  shashlik_tiles_provider_v0.rs  stub_tiles_provider.rs  tile_data.rs  tiles_provider.rs
old-tiles-gen/: Cargo.toml
old-tiles-gen/src/: lib.rs
old-tiles-gen/src/map/: mod.rs
old-tiles-gen/src/source/: reqwest_source.rs  tiles_sqlite_store.rs
old-tiles-gen/src/tiles/: mod.rs
renderer/: Cargo.toml
renderer/src/: camera.rs  canvas_api.rs  collision_handler.rs  consts.rs  depth_texture.rs  draw_commands.rs  fps.rs  geometry_data.rs  layers.rs  lib.rs  messages.rs  msaa_texture.rs  pipeline_provider.rs  render_group.rs  renderer_api.rs  vertex_attrs.rs  view_projection.rs
renderer/src/draw_commands/: mesh2d_draw_command.rs  mesh3d_draw_command.rs  mod.rs  text_draw_command.rs  text_draw_command2.rs
renderer/src/mesh/: mesh.rs
renderer/src/modifier/: mod.rs  render_modifier.rs
renderer/src/nodes/: camera_node.rs  feature_layers.rs  fps_node.rs  mesh_layer.rs  mesh_node.rs  mod.rs  scene_tree.rs  shape_layers.rs  style_adapter_node.rs  text_node.rs  world.rs
renderer/src/shaders/: mesh_shader.wgsl  screen_shape_shader.wgsl  shape_shader.wgsl  text_shader.wgsl
renderer/src/styles/: mod.rs  render_style.rs  style_id.rs  style_store.rs
renderer/src/svg/: mod.rs  svg_parser.rs
renderer/src/text/: default_face_wrapper.rs  glyph_tesselator.rs  mod.rs  text_renderer.rs
tiles-server-sqlite/: Cargo.toml
tiles-server-sqlite/src/: main.rs
wgpu-canvas/: Cargo.toml
wgpu-canvas/src/: lib.rs  wgpu_canvas.rs
winit-run/: Cargo.toml
winit-run/src/: lib.rs  main.rs
winit-run/ui/: app-window.slint
