[package]
name = "app-surface"
authors = ["jinleili"]
description = "Integrate wgpu into your existing iOS, Android and Web apps without relying on winit."
edition = "2024"
version = "1.7.2"
repository = "https://github.com/jinleili/wgpu-in-app"
keywords = ["android", "SurfaceView", "CAMetalLayer", "Canvas", "wgpu"]
license = "MIT"

[lib]
#crate-type = ["rlib"]

[features]
default = ["winit"]
cargo-clippy = []
webgl = ["wgpu/webgl"]
mac_catalyst = []
winit = ["dep:winit"]

[dependencies]
log.workspace = true
glam = { workspace = true, features = ["bytemuck"] }
wgpu.workspace = true
winit = { workspace = true, optional = true }

[target.'cfg(target_vendor = "apple")'.dependencies]
libc.workspace = true
objc.workspace = true
core-graphics-types.workspace = true
env_logger.workspace = true
raw-window-handle.workspace = true
futures-lite = "1.13"

[target.'cfg(target_os = "android")'.dependencies]
android_logger.workspace = true
jni.workspace = true
ndk-sys.workspace = true
raw-window-handle.workspace = true
futures-lite.workspace = true
