[package]
name = "ffi-run"
version = "0.1.0"
edition = "2024"

[lib]
# Include staticlib for iOS universal static archive generation (Step2)
crate-type = ["cdylib", "staticlib"]

[dependencies]
map = { path = "../map" }
uniffi = { version = "0.29.4", features = ["cli"]}
pollster = { workspace = true }
wgpu = { workspace = true}
wgpu-canvas = { workspace = true }
log = { workspace = true }
osm = { workspace = true }

[target.'cfg(target_os = "android")'.dependencies]
app-surface = { workspace = true, features = [] }
android_logger.workspace = true
jni.workspace = true
jni_fn.workspace = true
log-panics = "*"

[target.'cfg(target_os = "ios")'.dependencies]
app-surface = { path = "../app-surface" }
objc = { workspace = true }

[build-dependencies]
uniffi = { version = "0.29.4", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"