[package]
name = "map"
version = "0.1.0"
edition = "2024"

[dependencies]
old-tiles-gen = { path = "../old-tiles-gen"}
renderer = { path = "../renderer" }
anyhow = { workspace = true }
wgpu-canvas = { workspace = true}
lyon = { workspace = true}
tobj = "4.0.3"
futures = "0.3.31"
googleprojection = "1.2.0"
cgmath = "0.18.0"
geo-types = { workspace = true }
log = { workspace = true }
geo = "0.31.0"
rand = "0.9.2"


[build-dependencies]
anyhow = "1.0"

