[package]
name = "tiles-server-sqlite"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
poem = "3.1.12"
thiserror =  { workspace = true }
old-tiles-gen = { path = "../old-tiles-gen"}
serde = { version = "1.0.227", features = ["derive"] }
error-stack = { workspace = true }